# py-apx

./: .gitignore  .pylintrc  README.md  README.rst  run_tests.sh  setup.cfg  setup.py
apx/: __init__.py  base.py  client.py  generator.py  node.py  node_data.py
doc/: conf.py
examples/client/: demo_client1.py  demo_receiver.py  demo_sender.py  stress_test_receiver.py  stress_test_sender.py  test_client1.py  test_client2.py  test_client3.py
examples/generator/: example_node1.py
remotefile/: __init__.py  proto.py  socket_adapter.py
src/apx/: __init__.py  base.py  data_element.py  numheader.py
src/apx/parser/: __init__.py  signature_parser.py
tests/: apx_file_test.py  datasignature_test.py  generator_callback_first_test.py  generator_callback_last_test.py  generator_simple_test-p-only.py  generator_simple_test-r-only.py  generator_simple_test.py  generator_test.py  node_data_test.py  node_test.py  test_numheader.py  test_signature_parser.py
tests/expected_gen/: ApxNode_Test.c  ApxNode_Test.h  ApxNode_TestCallbackFirst.c  ApxNode_TestCallbackFirst.h  ApxNode_TestCallbackFirst_Cbk.h  ApxNode_TestCallbackLast.c  ApxNode_TestCallbackLast.h  ApxNode_TestCallbackLast_Cbk.h  ApxNode_TestSimple.c  ApxNode_TestSimple.h  ApxNode_TestSimpleOnlyP.c  ApxNode_TestSimpleOnlyP.h  ApxNode_TestSimpleOnlyR.c  ApxNode_TestSimpleOnlyR.h  ApxNode_Test_Cbk.h  ApxNode_Test_compact.c  ApxNode_Test_compact.h  ApxNode_Test_compact_Cbk.h
