[metadata]
name = apx
version = 0.5.0
author = Conny Gustafsson
author_email = congus8@gmail.com
description = APX for Python 3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cogu/cfile
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src